@@ -1,6 +1,7 @@
 Changes for 3.2.10rc1
 
 New features:
+..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)
 
 Bug fixes:
 ........S. [ZBX-12259] added an informative warning about lack of data for macros used in LLD rule filter (viktors)
